<resources>
    <string name="app_name" translatable="false">RMC</string>
    <string name="title_home" translatable="false">Rent My Car</string>
    <string name="title_offermycar">Offer My Car</string>
    <string name="title_profile">Profile</string>
    <string name="textview_profile">Profile</string>
    <string name="textview_mycars">My Cars</string>
    <string name="txt_hint_firstname">First Name</string>
    <string name="txt_hint_phonenumber">Telephone number</string>
    <string name="txt_hint_lastname">Last Name</string>
    <string name="txt_hint_address">Address</string>
    <string name="title_editprofile">Edit your profile</string>
    <string name="save">save</string>
    <string name="txt_upload_new_profile_photo">Upload new profile photo</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="verified_user">Verified User</string>
    <string name="not_verified_user">No verified User</string>
    <string name="bonuspoints">Bonuspoints</string>
    <string name="edit_profile">Edit profile</string>
    <string name="show_statistics">Show statistics</string>
    <string name="logout">Logout</string>
    <string name="switch_language">Switch language</string>
    <string name="location">Location</string>
    <string name="txt_hint_city">City</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_intro">intro</string>
    <string name="login_to_rent_my_car">Login to Rent My Car</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="register_to_rent_my_car">Register to Rent My Car</string>
    <string name="error_creating_account">There was an error creating your account.</string>
    <string name="success_creating_account">Account created!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="required_field">Required Field!</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="get_cardetails">Get cardetails</string>
    <string name="licenseplate">licenseplate</string>
    <string name="invalid_birthdate">Format should be yyyy-mm-dd</string>
    <string name="offers_title">Offers</string>
    <string name="home_availablecars">Available Cars</string>
    <string name="home_mybookings">My Bookings</string>
    <string name="home_myoffers">My Offers (werkt nog niet)</string>
    <string name="offer_pickupAfter">From: %1$s</string>
    <string name="offer_returnBefore">To: %1$s</string>
    <string name="the_car">The Car</string>
    <string name="delete">Delete</string>
    <string name="invalid_license">Licenseplate has an invalid pattern. Please provide a valid Dutch licenseplate</string>
    <string name="enddate">Enddate</string>
    <string name="startdate">Startdate</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="location_permission_denied_explanation">Location permission is needed for this functionality</string>
    <string name="filter_by">Filter</string>
    <string name="filter">Apply Filter</string>
    <string name="minimum_number_of_seats">Minimum number of seats</string>
    <string name="maximum_distance_from_my_location_in_km">Maximum distance from my location in km</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="fcev">FCEV</string>
    <string name="bev">BEV</string>
    <string name="ice">ICE</string>
    <string name="vehicle_type">Vehicle type:</string>
    <string name="brand">Brand:</string>
    <string name="year">Year:</string>
    <string name="nr_of_seats">Nr of seats:</string>
    <string name="color">Color:</string>
    <string name="mileage">Mileage:</string>
    <string name="BiometricPrompt_title">Security Rent My Car</string>
    <string name="BiometricPrompt_description">Authenticate to start the ride</string>
    <string name="return_car" translatable="false">Return this car</string>
    <string name="my_offers">My Offers</string>
    <string name="book_this_car">Book this car</string>
    <string name="start_riding">Start Riding</string>
    <string name="booking_cancel_dialog_title">Cancel this booking?</string>
    <string name="booking_cancel_dialog_message">Are you sure you want to cancel this booking?</string>
    <string name="booking_cancel_dialog_button_negative">No, keep it</string>
    <string name="booking_cancel_dialog_button_positive">Yes, continue cancel</string>
    <string name="_1s_kilometer_driven">%1$s kilometer driven</string>
    <string name="success_update_profile">Successfully updated profile!</string>
    <string name="item_offer_my_car">My Car</string>
    <string name="show_my_own_cars">Show my own cars</string>
    <string name="cannot_book_own_car">Can not book your own car</string>
    <string name="clear_filter">Clear filter</string>
    <string name="cancel_this_booking">Cancel this offer</string>
    <string name="offer_cancelled">Offer cancelled</string>
    <string name="offer_cant_be_cancelled">Offer can\'t be cancelled</string>
</resources>