<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:contentDescription="Home"
        />

    <item
        android:id="@+id/myCars"
        android:title="@string/title_offermycar"
        android:contentDescription="My Cars"
        android:icon="@drawable/car_black_24dp"
        />

    <item
        android:id="@+id/myOffers"
        android:title="@string/my_offers"
        android:contentDescription="My Offers"
        android:icon="@drawable/offer_black_24"
        />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/person_black_24dp"
        android:title="@string/title_profile"
        android:contentDescription="Profile"
        />

</menu>